# Automated-Resume-Relevance-Check-System

./: .replit  README.md  ai_analyzer.py  app.py  database.py  document_parser.py  models.py  openAI  os.environ  pyproject.toml  requirements.txt  scoring_engine.py  utils.py
attached_assets/: Pasted-The-system-will-Accept-resumes-PDF-DOCX-uploaded-by-students-Accept-job-descriptions-uploaded--1758381936849_1758381936851.txt
