[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "fuzzywuzzy>=0.18.0",
    "numpy>=2.3.3",
    "openai>=1.108.1",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.4",
    "python-docx>=1.2.0",
    "python-levenshtein>=0.27.1",
    "scikit-learn>=1.7.2",
    "streamlit>=1.49.1",
]
